Part 7 - User Account and Profile Picture -> pass image through form and resize via Pillow

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 __pycache__/
 local_settings.py
 
-#db
+### db ###
 *.db
-
 .env
 db.sqlite3
 
+### images ###
+*/static/profile_pics
 
 ### MyDevil ###
 public/
